carousel has weird z-index bug

--- a/finalproject/app/assets/stylesheets/fwslider.css
+++ b/finalproject/app/assets/stylesheets/fwslider.css
@@ -40,7 +40,7 @@
     position: absolute;
     top:0;
     width:100%;
-    z-index: 0;
+    z-index: -99999;
 }
 
 #fwslider .slide img {
@@ -59,7 +59,7 @@
 }
 
 #fwslider .slidePrev span {
-    background-image:url("../images/left_arrow.png");
+    background-image:url('/assets/slider_left_arrow.png');
     width:50px;
     height:50px;
     float:left;
@@ -80,7 +80,7 @@
 }
 
 #fwslider .slideNext span {
-    background-image:url("../images/right_arrow.png");
+    background-image:url('/assets/slider_right_arrow.png');
     width:50px;
     height:50px;
     float:left;
