--- a/finalproject/app/assets/stylesheets/index.css.scss
+++ b/finalproject/app/assets/stylesheets/index.css.scss
@@ -1,3 +1,9 @@
+#carousel_wrapper {
+  margin: 160px auto 0 auto;
+  width: 100%;
+  overflow: hidden;
+}
+
 .inner_content {
 	margin: 30px auto;
   width: 960px;
